--- a/LockettePro/src/config.yml
+++ b/LockettePro/src/config.yml
@@ -50,5 +50,21 @@ lockables:
 - DARK_OAK_DOOR
 - IRON_DOOR
 - LECTERN
+- CRIMSON_DOOR
+- WARPED_DOOR
+- OAK_FENCE_GATE
+- SPRUCE_FENCE_GATE
+- BIRCH_FENCE_GATE
+- CRIMSON_FENCE_GATE
+- WARPED_FENCE_GATE
+- ACACIA_FENCE_GATE
+- JUNGLE_FENCE_GATE
+- CRIMSON_TRAPDOOR
+- WARPED_TRAPDOOR
+- SPRUCE_TRAPDOOR
+- OAK_TRAPDOOR
+- BIRCH_TRAPDOOR
+- DARK_OAK_TRAPDOOR
+- ACACIA_TRAPDOOR
 protection-exempt:
 - nothing
