--- a/LockettePro/.classpath
+++ b/LockettePro/.classpath
@@ -2,10 +2,10 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="C:/DATA/ServerWorkspace/Spigot/Plugins/1.14.2/Vault-1.7.2.jar"/>
-	<classpathentry kind="lib" path="C:/DATA/ServerWorkspace/Spigot/Plugins/1.14.2/worldguard-bukkit-7.0.1-beta-01.jar"/>
-	<classpathentry kind="lib" path="C:/DATA/ServerWorkspace/Spigot/Plugins/1.15.1/ProtocolLib-4.5.0.jar"/>
-	<classpathentry kind="lib" path="C:/DATA/ServerWorkspace/Spigot/Plugins/1.14.4/CoreProtect-2.17.5.jar"/>
-	<classpathentry kind="lib" path="C:/DATA/ServerWorkspace/Spigot/Server/spigot-1.16.3.jar"/>
+	<classpathentry kind="lib" path="C:/DATA/ServerWorkspace/Spigot/Server/spigot-1.16.4.jar"/>
+	<classpathentry kind="lib" path="C:/DATA/ServerWorkspace/Spigot/Plugins/1.16.4/Vault-1.7.3.jar"/>
+	<classpathentry kind="lib" path="C:/DATA/ServerWorkspace/Spigot/Plugins/1.16.4/ProtocolLib-b482.jar"/>
+	<classpathentry kind="lib" path="C:/DATA/ServerWorkspace/Spigot/Plugins/1.16.4/worldguard-bukkit-7.0.4.jar"/>
+	<classpathentry kind="lib" path="C:/DATA/ServerWorkspace/Spigot/Plugins/1.16.4/CoreProtect-19.3.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
