--- a/LockettePro/src/main/resources/plugin.yml
+++ b/LockettePro/src/main/resources/plugin.yml
@@ -1,9 +1,11 @@
 name: LockettePro
 main: me.crafter.mc.lockettepro.LockettePro
-author: connection_lost
+authors:
+   - connection_lost
+   - ImSrPanda
 softdepend: [Vault, WorldGuard, ProtocolLib, CoreProtect]
 loadbefore: [SignShop]
-version: 2.10.8
+version: 2.10.9
 api-version: 1.13
 description: >
              LockettePro is a chest protection plugin for Bukkit. It is 100% compatible with original Lockette, but delivers a lot of performance enhancements and feature options.
