--- a/LockettePro/pom.xml
+++ b/LockettePro/pom.xml
@@ -6,12 +6,13 @@
 
     <groupId>me.crafter.mc</groupId>
     <artifactId>LockettePro</artifactId>
-    <version>2.11.0</version>
+    <version>2.11.1</version>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
+		<java.version>1.8</java.version>
     </properties>
 
     <repositories>
