--- a/LockettePro/src/lang_fr.yml
+++ b/LockettePro/src/lang_fr.yml
@@ -1,33 +1,33 @@
-# German translation by Morgan_vonBrylan
+# French translation by Mrflo67 and brunyman
 
 command-usage: "&6[LockettePro] aide du plugin &bLockettePro\n&c1. Pour ajouter un joueur au panneau, faites clic droit dessus, puis entrez /lock <ligne> <texte> pour changer la ligne.\n&c2. Pour recharger la configuration, entrez /lock reload.\nLockettePro par connection_lost"
 you-can-quick-lock-it: '&6[LockettePro] &aClic droit sur un bloc avec un panneau pour le verrouiller.'
-you-can-manual-lock-it: '&6[LockettePro] &aPlacez un panneau et Ècrivez [Private] pour le verrouiller.'
-config-reloaded: '&6[LockettePro] &aConfiguration rechargÈe.'
-no-permission: '&6[LockettePro] &cVous n''avez pas la permission de faire Áa.'
-no-sign-selected: '&6[LockettePro] &cSÈlectionnez un panneau en faisant clic droit dessus.'
-sign-need-reselect: '&6[LockettePro] &cVeuillez re-sÈlectionner le panneau.'
+you-can-manual-lock-it: '&6[LockettePro] &aPlacez un panneau et √©crivez [Private] pour le verrouiller.'
+config-reloaded: '&6[LockettePro] &aConfiguration recharg√©e.'
+no-permission: '&6[LockettePro] &cVous n''avez pas la permission de faire √ßa.'
+no-sign-selected: '&6[LockettePro] &cS√©lectionnez un panneau en faisant clic droit dessus.'
+sign-need-reselect: '&6[LockettePro] &cVeuillez re-s√©lectionner le panneau.'
 line-is-too-long: '&6[LockettePro] &cCette ligne est trop longue !'
 cannot-change-this-line: '&6[LockettePro] &cVous ne pouvez pas changer cette ligne.'
-sign-changed: '&6[LockettePro] &aPanneau modifiÈ avec succËs.'
-locked-quick: '&6[LockettePro] &aBloc verrouillÈ avec succËs.'
-additional-sign-added-quick: '&6[LockettePro] &aPanneau supplÈmentaire ajoutÈ avec succËs.'
-cannot-lock-quick: '&6[LockettePro] &cVous ne pouvez pas verrouiller Áa.'
-cannot-add-additional-sign-quick: '&6[LockettePro] &cVous ne pouvez pas mettre de panneau l‡.'
-locked-manual: '&6[LockettePro] &aBloc verrouillÈ avec succËs.'
-additional-sign-added-manual: '&6[LockettePro] &aPanneau supplÈmentaire ajoutÈ avec succËs.'
-cannot-lock-manual: '&6[LockettePro] &cVous ne pouvez pas verrouiller Áa.'
-cannot-add-additional-sign-manual: '&6[LockettePro] &cVous ne pouvez pas mettre de panneau l‡.'
-not-locked-yet-manual: '&6[LockettePro] &cCe bloc n''est pas envore verrouillÈ.'
-cannot-lock-door-nearby-manual: '&6[LockettePro] &cIl y a une porte ‡ proximitÈ.'
-block-already-locked-manual: '&6[LockettePro] &cCe bloc est dÈj‡ verrouillÈ.'
+sign-changed: '&6[LockettePro] &aPanneau modifi√© avec succ√®s.'
+locked-quick: '&6[LockettePro] &aBloc verrouill√© avec succ√®s.'
+additional-sign-added-quick: '&6[LockettePro] &aPanneau suppl√©mentaire ajout√© avec succ√®s.'
+cannot-lock-quick: '&6[LockettePro] &cVous ne pouvez pas verrouiller √ßa.'
+cannot-add-additional-sign-quick: '&6[LockettePro] &cVous ne pouvez pas mettre de panneau l√†.'
+locked-manual: '&6[LockettePro] &aBloc verrouill√© avec succ√®s.'
+additional-sign-added-manual: '&6[LockettePro] &aPanneau suppl√©mentaire ajout√© avec succ√®s.'
+cannot-lock-manual: '&6[LockettePro] &cVous ne pouvez pas verrouiller √ßa.'
+cannot-add-additional-sign-manual: '&6[LockettePro] &cVous ne pouvez pas mettre de panneau l√†.'
+not-locked-yet-manual: '&6[LockettePro] &cCe bloc n''est pas envore verrouill√©.'
+cannot-lock-door-nearby-manual: '&6[LockettePro] &cIl y a une porte √† proximit√©.'
+block-already-locked-manual: '&6[LockettePro] &cCe bloc est d√©j√† verrouill√©.'
 block-is-not-lockable: '&6[LockettePro] &cCe bloc n''est pas verrouillable.'
-sign-selected: '&6[LockettePro] &aPanneau sÈlectionnÈ.'
-break-own-lock-sign: '&6[LockettePro] &aVous avez cassÈ votre panneau verrou.'
+sign-selected: '&6[LockettePro] &aPanneau s√©lectionn√©.'
+break-own-lock-sign: '&6[LockettePro] &aVous avez cass√© votre panneau verrou.'
 cannot-break-this-lock-sign: '&6[LockettePro] &cVous ne pouvez pas casser ce panneau verrou.'
-break-own-additional-sign: '&6[LockettePro] &aVous avez cassÈ votre panneau supplÈmentaire.'
-break-redundant-additional-sign: '&6[LockettePro] &aVous avez cassÈ un panneau supplÈmentaire redondant.'
-cannot-break-this-additional-sign: '&6[LockettePro] &cVous ne pouvez pas casser ce panneau supplÈmentaire.'
-block-is-locked: '&6[LockettePro] &cCe bloc est verrouillÈ.'
-cannot-interfere-with-others: '&6[LockettePro] &cVous ne pouvez pas placer de bloc qui pourrait interfÈrer avec d''autres.'
+break-own-additional-sign: '&6[LockettePro] &aVous avez cass√© votre panneau suppl√©mentaire.'
+break-redundant-additional-sign: '&6[LockettePro] &aVous avez cass√© un panneau suppl√©mentaire redondant.'
+cannot-break-this-additional-sign: '&6[LockettePro] &cVous ne pouvez pas casser ce panneau suppl√©mentaire.'
+block-is-locked: '&6[LockettePro] &cCe bloc est verrouill√©.'
+cannot-interfere-with-others: '&6[LockettePro] &cVous ne pouvez pas placer de bloc qui pourrait interf√©rer avec d''autres.'
 sign-error: '&4[ERREUR]'
