--- a/LockettePro/.classpath
+++ b/LockettePro/.classpath
@@ -2,10 +2,15 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="C:/DATA/ServerWorkspace/Spigot/Plugins/1.16.4/Vault-1.7.3.jar"/>
-	<classpathentry kind="lib" path="C:/DATA/ServerWorkspace/Spigot/Plugins/1.16.4/ProtocolLib-b482.jar"/>
-	<classpathentry kind="lib" path="C:/DATA/ServerWorkspace/Spigot/Plugins/1.16.4/worldguard-bukkit-7.0.4.jar"/>
-	<classpathentry kind="lib" path="C:/DATA/ServerWorkspace/Spigot/Plugins/1.16.4/CoreProtect-19.3.jar"/>
-	<classpathentry kind="lib" path="C:/DATA/ServerWorkspace/Spigot/Server/spigot-1.16.5.jar"/>
+	<classpathentry kind="lib" path="C:/WORKSPACE/ServerWorkspace/Spigot/Plugins/1.16.4/CoreProtect-19.3.jar"/>
+	<classpathentry kind="lib" path="C:/WORKSPACE/ServerWorkspace/Spigot/Plugins/1.16.4/ProtocolLib-b482.jar"/>
+	<classpathentry kind="lib" path="C:/WORKSPACE/ServerWorkspace/Spigot/Plugins/1.16.4/Vault-1.7.3.jar"/>
+	<classpathentry kind="lib" path="C:/WORKSPACE/ServerWorkspace/Spigot/Plugins/1.16.4/worldguard-bukkit-7.0.4.jar"/>
+	<classpathentry kind="lib" path="C:/WORKSPACE/ServerWorkspace/Spigot/Server/spigot-1.18.2-R0.1-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="C:/WORKSPACE/ServerWorkspace/Spigot/Server/spigot-api-1.18.2-R0.1-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="C:/WORKSPACE/ServerWorkspace/Spigot/Server/guava-31.1-jre.jar"/>
+	<classpathentry kind="lib" path="C:/WORKSPACE/ServerWorkspace/Spigot/Server/gson-2.8.2.jar"/>
+	<classpathentry kind="lib" path="C:/WORKSPACE/ServerWorkspace/Spigot/Server/javax.annotation-api-1.3.2.jar"/>
+	<classpathentry kind="lib" path="C:/WORKSPACE/ServerWorkspace/Spigot/Server/jsr305-3.0.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
